Use nicer fonts, and fix admin thumbnail text wrapping

--- a/content/assets/admin.css
+++ b/content/assets/admin.css
@@ -18,6 +18,7 @@
     --danger-control-text: #800;
     --new-article-border-color: #080;
     --new-article-input-bg: #efe;
+    --article-input-disabled-bg: #ccc;
     --new-article-heading-color: #0a0;
     --new-article-text-color: #070;
     --separator: #aaa;
@@ -35,7 +36,8 @@
 }
 
 html.admin {
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: "Lato", sans-serif;
+    font-size: 16px;
 }
 
 body.admin {
@@ -368,6 +370,8 @@ button:hover {
     align-self: end;
     font-size: 70%;
     text-align: center;
+    overflow-wrap: break-word;
+    max-width: 100%;
 }
 
 .image-list .delete-image {
@@ -497,6 +501,10 @@ button:hover {
     font-family: monospace;
     font-size: 77%;
     padding: 0.2rem 0.4rem;
+}
+
+#article-editor-input:disabled {
+    background-color: var(--article-input-disabled-bg);
 }
 
 .new #article-editor-input {
